[gd_scene load_steps=4 format=3 uid="uid://ehvm1mbkgc7g"]

[ext_resource type="Script" path="res://phases/phase_4.gd" id="1_cqnyk"]
[ext_resource type="Texture2D" uid="uid://dxgmy13s2g4un" path="res://assets/Asset 53.png" id="1_yvi76"]
[ext_resource type="Script" path="res://phases/inputBid.gd" id="2_dxhjn"]

[node name="Phase4" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 418.0
offset_top = 196.0
offset_right = -434.0
offset_bottom = -188.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cqnyk")

[node name="MessageBox" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 300.0
offset_bottom = 263.0
texture = ExtResource("1_yvi76")
expand_mode = 1

[node name="Title" type="Label" parent="MessageBox"]
layout_mode = 0
offset_left = 27.0
offset_top = 19.0
offset_right = 267.0
offset_bottom = 42.0
text = "Bidding"
horizontal_alignment = 1

[node name="Submit" type="Button" parent="MessageBox"]
layout_mode = 0
offset_left = 219.0
offset_top = 171.0
offset_right = 257.0
offset_bottom = 202.0
disabled = true
text = "Bid!"

[node name="SkipBid" type="Button" parent="MessageBox"]
layout_mode = 0
offset_left = 112.0
offset_top = 219.0
offset_right = 182.0
offset_bottom = 250.0
disabled = true
text = "Skip Bid"

[node name="InputBid" type="LineEdit" parent="MessageBox"]
layout_mode = 0
offset_left = 22.0
offset_top = 174.0
offset_right = 210.0
offset_bottom = 203.0
theme_override_font_sizes/font_size = 12
placeholder_text = "Enter amount of spice to bid"
script = ExtResource("2_dxhjn")

[node name="AtreidesSeeCard" type="Button" parent="MessageBox"]
visible = false
layout_mode = 0
offset_left = 93.0
offset_top = 90.0
offset_right = 196.0
offset_bottom = 121.0
text = "Card bidded"

[node name="LastBid" type="Label" parent="MessageBox"]
layout_mode = 0
offset_left = 24.0
offset_top = 98.0
offset_right = 228.0
offset_bottom = 121.0
text = "First bid!"

[node name="WhoIsBidding" type="Label" parent="MessageBox"]
layout_mode = 0
offset_left = 23.0
offset_top = 63.0
offset_right = 227.0
offset_bottom = 86.0
text = "noone"

[node name="Timer" type="Timer" parent="."]

[node name="TimerNewCard" type="Timer" parent="."]

[connection signal="pressed" from="MessageBox/Submit" to="." method="_on_submit_pressed"]
[connection signal="pressed" from="MessageBox/SkipBid" to="." method="_on_skip_bid_pressed"]
[connection signal="text_changed" from="MessageBox/InputBid" to="MessageBox/InputBid" method="_on_text_changed"]
